{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 35,
  "lineage": "03b003d5-2fd3-9ab9-9919-f3be7a4667bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c2b0637c4b4a2c7",
            "arn": "arn:aws:ec2:us-east-1:485034663303:elastic-ip/eipalloc-08c2b0637c4b4a2c7",
            "association_id": "eipassoc-085cf80ca42735aa2",
            "domain": "vpc",
            "id": "eipalloc-08c2b0637c4b4a2c7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f0517f11dc95444",
            "private_dns": "ip-10-30-1-215.ec2.internal",
            "private_ip": "10.30.1.215",
            "public_dns": "ec2-44-194-68-234.compute-1.amazonaws.com",
            "public_ip": "44.194.68.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:485034663303:instance/i-0356bdfa93fac3f97",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0356bdfa93fac3f97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "memo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9507e4d66926598",
            "private_dns": "ip-10-30-1-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.250",
            "public_dns": "ec2-3-90-246-228.compute-1.amazonaws.com",
            "public_ip": "3.90.246.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc5faf5b0c8dcfaf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06758212e53437d30",
            "tags": {
              "Name": "dolfined_instance"
            },
            "tags_all": {
              "Name": "dolfined_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b64e2c975fbe9124"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_subnet.dol_Public",
            "aws_vpc.dol_vpc",
            "data.aws_ami.amaz23"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:internet-gateway/igw-04a39611340681167",
            "id": "igw-04a39611340681167",
            "owner_id": "485034663303",
            "tags": {
              "Name": "dolfined_igw"
            },
            "tags_all": {
              "Name": "dolfined_igw"
            },
            "vpc_id": "vpc-0df09eabc7ef45e37"
          },
          "dependencies": [
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c2b0637c4b4a2c7",
            "association_id": "eipassoc-085cf80ca42735aa2",
            "connectivity_type": "public",
            "id": "nat-09cef6f7ff5f7b6f4",
            "network_interface_id": "eni-09f0517f11dc95444",
            "private_ip": "10.30.1.215",
            "public_ip": "44.194.68.234",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06758212e53437d30",
            "tags": {
              "Name": "dolfined_nat"
            },
            "tags_all": {
              "Name": "dolfined_nat"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.dol_Public",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dol_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:route-table/rtb-01878e731a3b49f7e",
            "id": "rtb-01878e731a3b49f7e",
            "owner_id": "485034663303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a39611340681167",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dolfined_Public_RT"
            },
            "tags_all": {
              "Name": "dolfined_Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df09eabc7ef45e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4edbd2af4750236",
            "route_table_id": "rtb-01878e731a3b49f7e",
            "subnet_id": "subnet-06758212e53437d30"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.dol_RT",
            "aws_subnet.dol_Public",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:security-group/sg-0b64e2c975fbe9124",
            "description": "Allow HTTP inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b64e2c975fbe9124",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dolfined_SG",
            "name_prefix": "",
            "owner_id": "485034663303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dolfined_SG"
            },
            "tags_all": {
              "Name": "dolfined_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df09eabc7ef45e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dol_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:subnet/subnet-06758212e53437d30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06758212e53437d30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485034663303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dolfined_Public"
            },
            "tags_all": {
              "Name": "dolfined_Public"
            },
            "vpc_id": "vpc-0df09eabc7ef45e37"
          },
          "dependencies": [
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dol_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:vpc/vpc-0df09eabc7ef45e37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0bb78cb613d3a4abe",
            "default_route_table_id": "rtb-014c6049163a5895b",
            "default_security_group_id": "sg-061f8c5f4c3e6457c",
            "dhcp_options_id": "dopt-016f766dda408e679",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df09eabc7ef45e37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014c6049163a5895b",
            "owner_id": "485034663303",
            "tags": {
              "Name": "dolfined_VPC"
            },
            "tags_all": {
              "Name": "dolfined_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_HTTP_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:security-group-rule/sgr-0f75f4279e943bcbd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f75f4279e943bcbd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b64e2c975fbe9124",
            "security_group_rule_id": "sgr-0f75f4279e943bcbd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:security-group-rule/sgr-038e9196504ded6d4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-038e9196504ded6d4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b64e2c975fbe9124",
            "security_group_rule_id": "sgr-038e9196504ded6d4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:security-group-rule/sgr-0fc2794a9e6df6023",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fc2794a9e6df6023",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b64e2c975fbe9124",
            "security_group_rule_id": "sgr-0fc2794a9e6df6023",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_HTTP",
            "aws_vpc.dol_vpc"
          ]
        }
      ]
    }
  ]
}